# ChessBot

./: chessbot.py  maarittelydokumentti.md  pyproject.toml  runcommand
documentation/: maarittelydokumentti.md
documentation/weekly reports/: viikkoraportti2.md
src/: chessbot.py
