[project]
name = "chessbot"
version = "0.1.0"
description = "A chess bot made by Thierry Kaoneka"
authors = [
    {name = "Thierry Kaoneka",email = "kaonekat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage (>=7.13.5,<8.0.0)"
]

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "robotframework (>=7.4.2,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
